# lab

./: conftest.py  pyproject.toml
locators/: locators.py
pages/: base_page.py
tests/: test_demoqa.py
