[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Alecsey Sorokin <alecsey.m.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
pytest = "^7.2.2"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
